--- a/music/visualize.html
+++ b/music/visualize.html
@@ -85,11 +85,13 @@
 				});
 			}
 
+			var lastmousemove = Date.now();
 
 			$(window).resize(function() {
 				canvas1.width = canvas2.width = canvas3.width = window.innerWidth;
 				canvas1.height = canvas2.height = canvas3.height = window.innerHeight;
 			}).resize().mousemove(function(evt) {
+				lastmousemove = Date.now();
 				if (enable3D) {
 					rotate(canvas1, evt.pageX, evt.pageY, -200);
 					rotate(canvas2, evt.pageX, evt.pageY, 0);
@@ -106,6 +108,9 @@
 
 			var analyser = audio.createAnalyser();
 			analyser.fftSize = 512;
+
+			var gain = audio.createGain();
+			gain.connect(analyser);
 
 			elemSource.connect(analyser);
 			analyser.connect(audio.destination);
@@ -162,7 +167,7 @@
 							analyser.disconnect();
 							userSource.disconnect();
 
-							userSource.connect(analyser);
+							userSource.connect(gain);
 						}
 					},
 					function(err) {
@@ -184,6 +189,8 @@
 				circleOffsets[i] = Math.random()*2*Math.PI
 			}
 
+			var lastr = 0;
+
 			var wave = new Uint8Array(analyser.fftSize);
 			var freq = new Uint8Array(analyser.frequencyBinCount);
 			function draw() {
@@ -200,6 +207,7 @@
 				var w = canvas1.width / analyser.frequencyBinCount;
 
 				var totalFreq = 0;
+				avgfreqs = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]; // 16 sections
 
 				ctx1.strokeStyle = "#00f";
 				for (var i=0; i<analyser.frequencyBinCount; i++) {
@@ -212,6 +220,10 @@
 					ctx1.stroke();
 
 					totalFreq+=freq[i];
+					avgfreqs[Math.floor(i/(analyser.frequencyBinCount/16))] += freq[i];
+				}
+				for (i=0; i<avgfreqs.length; i++) {
+					avgfreqs[i] /= analyser.frequencyBinCount/16;
 				}
 
 
@@ -223,22 +235,12 @@
 
 				var w = canvas1.width / analyser.fftSize;
 
-				var maxAmp = 0;
-				var totalDiff = 0;
-				var totalDiffSize = 0;
 
 				ctx2.beginPath()
 				for (i = 0; i<analyser.fftSize; i++) {
 					ctx2.lineTo(i*w, (wave[i]/128)*(canvas2.height/2));
-
-					maxAmp = Math.max(maxAmp, Math.abs(wave[i]-64));
-					for (j=-4; j<4; j++) {
-						if (wave[i+j]) {
-							totalDiff += Math.abs(wave[i]-wave[i+j])
-							totalDiffSize++;
-						}
-					}
 				}
+
 				ctx2.strokeStyle = "#f00";
 				ctx2.stroke();
 
@@ -251,20 +253,16 @@
 				var avgFreq = totalFreq / maxFreq;
 
 				var maxSize = Math.min(canvas3.width, canvas3.height)/2;
-				var r = avgFreq*maxSize
-
-				var avgDiff = totalDiff / totalDiffSize;
-
-				var waveSize = Math.pow(1+(avgDiff / maxAmp * 256), 1.75);
+				var r = lastr = ((avgFreq*maxSize)+lastr*3)/4
 
 				ctx3.strokeStyle = "#0f0";
 				ctx3.beginPath();
 				for (var t=0; t<2*Math.PI; t+=Math.PI/128) {
 					var w = 0
 					for (var i=0; i<16; i++) {
-						w += Math.sin((t+circleOffsets[i])*Math.floor(Math.pow(i, 1.25)/2))*(freq[i*analyser.frequencyBinCount/16]/160);
+						w += Math.sin((t+circleOffsets[i])*i) * ((Math.pow(16, avgfreqs[i]/128)-1)/6*r*0.75/(1+i/4));
 					}
-					var r2 = r + (w/16)*waveSize;
+					var r2 = r + (w/16)
 					ctx3.lineTo(canvas3.width/2 + Math.cos(t)*r2, canvas3.height/2 + Math.sin(t)*r2)
 				}
 
@@ -274,6 +272,9 @@
 				for (i=0; i<16; i++) {
 					circleOffsets[i] = (circleOffsets[i] + (Math.random()-0.5)/(16-i)*3)%(2*Math.PI)
 				}
+
+
+				$(document.body).css("cursor", (Date.now() - lastmousemove < 1000) ? "auto" : "none");
 			}
 			draw()
 		</script>
