Fix jquery link

--- a/music/visualize2.html
+++ b/music/visualize2.html
@@ -82,7 +82,7 @@
 		<audio controls crossorigin="anonymous"></audio>
 
 		<!--<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>-->
-		<script src="jquery.js"></script>
+		<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 		<script src="adapter.js"></script>
 		<script>
 			var canvas1 = $("#canvas1")[0];
