Better music visualizer error handling

--- a/music/visualize.html
+++ b/music/visualize.html
@@ -191,7 +191,7 @@
 						}
 					},
 					function(err) {
-						$("#current").text(err);
+						$("#current").text(err.toString() + ": Name:" + err.name + "; Msg:" + err.message + "; ConstraintName:" + err.constraintName);
 					}
 				)
 			})
