--- a/music/visualize2.html
+++ b/music/visualize2.html
@@ -81,8 +81,8 @@
 		<canvas id="canvas3"></canvas>
 		<audio controls crossorigin="anonymous"></audio>
 
-		<!--<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>-->
-		<script src="jquery.js"></script>
+		<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+		<!--<script src="jquery.js"></script>-->
 		<script src="adapter.js"></script>
 		<script>
 			var canvas1 = $("#canvas1")[0];
